# opencv_code

./: .gitignore  CMakeLists.txt  CORE_scan_image.cpp  bilateral_filtered.cpp  canny_sobel.cpp  ch1.cpp  ch2.cpp  ch3.cpp  ch4.cpp  dialate_erode.cpp  fast_remap.cpp  floodfill.cpp  harris_corner.cpp  hough_transformer.cpp  main.cpp  open_close.cpp  pyr_resize.cpp  roi_blend.cpp  template.cpp  trackbar.cpp  trackbar_blur.cpp  warpAffine.cpp
ch1/: eg1.cpp
core_module/: Mat.cpp  mask_operations.cpp  mat.cpp  scan_image.cpp
